[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopengine"
version = "1.2.0"
description = "Official LoopEngine SDK for sending feedback to the Ingest API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "LoopEngine", email = "support@loopengine.dev" },
]
keywords = ["loopengine", "feedback", "sdk"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://loopengine.dev"
Repository = "https://github.com/LoopEngine-dev/loopengine-py"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

